--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,10 @@
       width: 100px;
     }
   </style>
-  <script id="places-geojson" type="application/json">
+  {{places_geojson|json_script:"places-geojson"}}
+
+  <!--
+    <script id="places-geojson" type="application/json">
     {
       "type": "FeatureCollection",
       "features": [
@@ -72,6 +75,7 @@
       ]
     }
   </script>
+-->
 
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
